add getAll and saveNew for ShelterController + ShelterService